// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnpublishedTooltip /> renders when not published because author confirmed his account too late 1`] = `
<Overlay
  animation={[Function]}
  container={[Function]}
  placement="top"
  rootClose={false}
  show={true}
  target={[MockFunction]}
>
  <_default
    id="UnpublishedTooltip"
  >
    <i
      className="cap cap-delete-2"
    />
     
    <FormattedMessage
      id="unpublished-vote"
      values={Object {}}
    />
  </_default>
</Overlay>
`;

exports[`<UnpublishedTooltip /> renders when not published because author is not confirmed 1`] = `
<Overlay
  animation={[Function]}
  container={[Function]}
  placement="top"
  rootClose={false}
  show={true}
  target={[MockFunction]}
>
  <_default
    id="UnpublishedTooltip"
  >
    <i
      className="cap cap-delete-2"
    />
     
    <FormattedMessage
      id="unpublished-vote"
      values={Object {}}
    />
  </_default>
</Overlay>
`;

exports[`<UnpublishedTooltip /> renders when not published because author must confirm 1`] = `
<Overlay
  animation={[Function]}
  container={[Function]}
  placement="top"
  rootClose={false}
  show={true}
  target={[MockFunction]}
>
  <_default
    id="UnpublishedTooltip"
  >
    <i
      className="cap cap-delete-2"
    />
     
    <FormattedMessage
      id="voting-pending-publication"
      values={Object {}}
    />
  </_default>
</Overlay>
`;

exports[`<UnpublishedTooltip /> renders when published 1`] = `
<Overlay
  animation={[Function]}
  container={[Function]}
  placement="top"
  rootClose={false}
  show={false}
  target={[MockFunction]}
>
  <_default
    id="UnpublishedTooltip"
  >
    <i
      className="cap cap-delete-2"
    />
     
  </_default>
</Overlay>
`;
